<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_link_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_dark"
            android:text="@string/email_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/link_email_title_des" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:startIconDrawable="@drawable/ic_mail"
            app:boxStrokeColor="@color/plant_green"
            app:hintTextColor="@color/plant_green"
            android:contentDescription="@string/link_email_input_des">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_link_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:paddingStart="50dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/plant_green"
            app:hintTextColor="@color/plant_green"
            android:contentDescription="@string/link_password_input_des">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_link_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="50dp"
                android:hint="@string/password_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit_link_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/plant_green"
            android:textColor="@color/white"
            android:paddingVertical="12dp"
            android:text="@string/btn_submit"
            android:contentDescription="@string/link_submit_button_des" />
    </LinearLayout>
</ScrollView>
