<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_fragmentHome">

    <fragment
        android:id="@+id/nav_fragmentHome"
        android:name="com.quan.phnloinhn.src.View.Fragment.FragmentHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fragmentProfile"
        android:name="com.quan.phnloinhn.src.View.Fragment.FragmentProfile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/nav_fragmentHistory"
        android:name="com.quan.phnloinhn.src.View.Fragment.FragmentHistory"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history"/>

</navigation>